# robust_mckp

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  Makefile  README.md  REPRODUCIBILITY.md  REVISION_HISTORY.md  SUBMISSION.md  pyproject.toml
.github/workflows/: ci.yml
experiments_nested/: _common.py  exp1_integrality_gap.py  exp4_summary_table.py  replot_exp1_from_results.py  replot_exp2_from_results.py  replot_exp3_from_results.py
legacy/: MANIFEST.sha256  README.md
legacy/v2/: README.md
legacy/v3/: README.md
manuscript/: README.md
paper_versions/v4/: README.md  cover_letter_opre.md  executive_summary_opre.tex  main_v4.tex  main_v4_ec.tex  main_v4_ec_blind.tex  main_v4_opre.tex  main_v4_opre_blind.tex
research/: GO_NO_GO_VERDICT.md  LITERATURE_NOVELTY_AUDIT_V4.md  POSITIVE_CONFIRMATION.md  README.md  STRUCTURAL_FEASIBILITY_VERDICT.md  V4_EXPERIMENT_AUDIT_LOG.md  benchmark_instances.py  bound_dominance.py  compressed_interval_oracle.py  exact_integration_campaign.py  generate_v4_publication_artifacts.py  integrated_exact_solver.py  novelty_go_no_go.py  positive_confirmation_study.py  structural_feasibility_study.py  v4_publication_campaign.py
results/v4_publication_20260720_final/: application.csv  application_raw_timings.csv  common_trace.csv  (+26 more)
robust_mckp/: CITATION.cff  README.md  REPRODUCIBILITY.md  pyproject.toml
robust_mckp/experiments_case_retail/: _bootstrap.py  case_retail_pricing.py
robust_mckp/experiments_nested/: _bootstrap.py  exp2_scalability.py  exp3_risk_frontier.py  exp4_summary_table.py
robust_mckp/src/robust_mckp/: certificate.py  hull.py  model.py  preprocessing.py  rounding.py  solver.py  utils.py
robust_mckp/tests/: test_api.py
scripts/: benchmark_solvers.py  build_parametric_sweep_claim_audit.py  build_v3_experiment_evidence.py  build_v4_anonymous_supplement.py  clean_workspace.py  plot_branching_strategy_diagnostics.py  plot_empirical_synthesis.py  plot_final_publication_experiment.py  plot_pathC_application.py  plot_publication_benchmarks.py  plot_publishable_results.py  plot_tight_capacity_diagnostics.py  run_branching_strategy_diagnostics.py  run_clean_repro_check.py  run_exact_bnb_performance_benchmarks.py  run_extended_publishable_experiments.py  run_fixed_theta_bnb_benchmarks.py  run_global_theta_bnb_benchmarks.py  run_parametric_sweep_ablation.py  run_parametric_sweep_benchmarks.py  run_pathC_data_calibration.py  run_pathC_semisynthetic_application.py  run_publication_benchmarks.py  run_publishable_experiments.py  run_retail_publishable.py  run_segment_local_budget_experiments.py  run_solver_benchmarks.py  run_tight_capacity_diagnostics.py  run_true_clean_room_check.py  run_v3_experiments.py  run_v4_publication_campaign.py  summarize_branching_strategy_diagnostics.py  summarize_empirical_synthesis.py  summarize_final_publication_experiment.py  summarize_parametric_sweep_ablation.py  summarize_parametric_sweep_benchmarks.py  summarize_pathC_application.py  summarize_publication_benchmarks.py  summarize_segment_local_budget_experiments.py  summarize_tight_capacity_diagnostics.py  (+1 more)
tests/: test_api.py  test_bound_dominance.py  test_box.py  test_certificate.py  test_compressed_interval_oracle.py  test_exact_bnb.py  test_global_theta_bnb.py  test_greedy.py  test_hull.py  test_integrated_exact_solver.py  test_legacy_archive.py  test_nominal.py  test_novelty_go_no_go.py  test_parametric_theta_sweep.py  test_rounding.py  test_scaling.py  test_segment_local_budgets.py  test_solver.py  test_structural_feasibility_study.py  test_v4_publication_campaign.py
(+63 files in other folders)
