[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robust-mckp"
version = "0.1.0"
description = "Simultaneous Lagrangian bounds and certifying algorithms for Gamma-robust MCKP."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Eric Shao", email = "ershao@student.ethz.ch"}
]
keywords = ["robust optimization", "multiple-choice knapsack", "Lagrangian bounds", "certification"]
classifiers = [
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.22"]

[project.optional-dependencies]
experiments = [
  "matplotlib>=3.8",
  "tqdm>=4.66",
]
validation = [
  "scipy>=1.12",
  "pyscipopt>=6.1",
]
dev = [
  "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/eric939/robust_mckp"
Repository = "https://github.com/eric939/robust_mckp"
Issues = "https://github.com/eric939/robust_mckp/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
